# edgedb-axum-weather-app

./: Cargo.toml  README.md
dbschema/: default.esdl
src/: main.rs
