[package]
name = "weather_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
edgedb-errors = "0.4.1"
edgedb-protocol = "0.6.0"
edgedb-tokio = "0.5"
reqwest = "0.11.24"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
